@@ -5110,172 +5110,6 @@ genCmpEQorNE (iCode * ic, iCode * ifx)
     }
 }
 
-static bool
-genPointerGetSetOfs (iCode * ic)
-{
-  iCode *lic = ic->next;
-  bool pset, pget;
-  int size;
-  symbol *sym;
-  asmop *derefaop;
-
-  /* TODO: Make this work with new allcoator! */
-  return FALSE;
-
-  /* Make sure we have a next iCode */
-  DD (emitcode ("", "; checking lic"));
-  if (!lic)
-    return FALSE;
-
-  /* Make sure the result of the addition is an iTemp */
-  DD (emitcode ("", "; checking IS_ITEMP"));
-  if (!IS_ITEMP (IC_RESULT (ic)))
-    return FALSE;
-
-  /* Make sure the next iCode is a pointer set or get */
-  pset = POINTER_SET (lic);
-  pget = POINTER_GET (lic);
-  DD (emitcode ("", "; pset=%d, pget=%d", pset, pget));
-  if (!pset && !pget)
-    return FALSE;
-
-  /* Make sure this is the only use of the pointer */
-  if (bitVectnBitsOn (OP_USES (IC_RESULT (ic))) > 1)
-    return FALSE;
-
-  DD (emitcode ("", "; checking pset operandsEqu"));
-  if (pset & !operandsEqu (IC_RESULT (ic), IC_RESULT (lic)))
-    return FALSE;
-
-  DD (emitcode ("", "; checking pget operandsEqu"));
-  if (pget & !operandsEqu (IC_RESULT (ic), IC_LEFT (lic)))
-    return FALSE;
-
-  DD (emitcode ("", "; checking IS_SYMOP"));
-  if (!IS_SYMOP (IC_LEFT (ic)))
-    return FALSE;
-
-  DD (emitcode ("", "; checking !IS_TRUE_SYMOP"));
-  if (IS_TRUE_SYMOP (IC_LEFT (ic)))
-    return FALSE;
-
-  sym = OP_SYMBOL (IC_LEFT (ic));
-
-  DD (emitcode ("", "; checking remat"));
-  if (!sym->remat)
-    return FALSE;
-
-
-  if (pget)
-    {
-      D (emitcode (";     genPointerGetOfs", ""));
-      aopOp (IC_LEFT (ic), ic, FALSE);
-      derefaop = aopDerefAop (AOP (IC_LEFT (ic)));
-      freeAsmop (IC_LEFT (ic), NULL, ic, TRUE);
-
-      aopOp (IC_RIGHT (ic), ic, FALSE);
-      aopOp (IC_RESULT (lic), lic, FALSE);
-
-      if (AOP_SIZE (IC_RIGHT (ic)) == 1)
-        {
-          if (SPEC_USIGN (getSpec (operandType (IC_RIGHT (ic)))))
-            {
-              loadRegFromAop (hc08_reg_x, AOP (IC_RIGHT (ic)), 0);
-              loadRegFromConst (hc08_reg_h, zero);
-            }
-          else
-            {
-              loadRegFromAop (hc08_reg_a, AOP (IC_RIGHT (ic)), 0);
-              transferRegReg (hc08_reg_a, hc08_reg_x, FALSE);
-              emitcode ("rola", "");
-              emitcode ("clra", "");
-              emitcode ("sbc", "#0");
-              hc08_dirtyReg (hc08_reg_a, FALSE);
-              regalloc_dry_run_cost += 4;
-              hc08_useReg (hc08_reg_a);
-              transferRegReg (hc08_reg_a, hc08_reg_h, FALSE);
-            }
-        }
-      else
-        loadRegFromAop (hc08_reg_hx, AOP (IC_RIGHT (ic)), 0);
-      size = AOP_SIZE (IC_RESULT (lic));
-      derefaop->size = size;
-
-      while (size--)
-        {
-          emitcode ("lda", "%s,x", aopAdrStr (derefaop, size, TRUE));
-          regalloc_dry_run_cost += 3;
-          hc08_useReg (hc08_reg_a);
-          storeRegToAop (hc08_reg_a, AOP (IC_RESULT (lic)), size);
-          hc08_freeReg (hc08_reg_a);
-        }
-
-      lic->generated = 1;
-      hc08_freeReg (hc08_reg_hx);
-
-      freeAsmop (NULL, derefaop, ic, TRUE);
-      freeAsmop (IC_RIGHT (ic), NULL, ic, TRUE);
-      freeAsmop (IC_RESULT (lic), NULL, lic, TRUE);
-
-      return TRUE;
-    }
-
-  if (pset)
-    {
-      D (emitcode (";     genPointerSetOfs", ""));
-      aopOp (IC_LEFT (ic), ic, FALSE);
-      derefaop = aopDerefAop (AOP (IC_LEFT (ic)));
-      freeAsmop (IC_LEFT (ic), NULL, ic, TRUE);
-
-      aopOp (IC_RIGHT (ic), ic, FALSE);
-      aopOp (IC_RIGHT (lic), lic, FALSE);
-
-      if (AOP_SIZE (IC_RIGHT (ic)) == 1)
-        {
-          if (SPEC_USIGN (getSpec (operandType (IC_RIGHT (ic)))))
-            {
-              loadRegFromAop (hc08_reg_x, AOP (IC_RIGHT (ic)), 0);
-              loadRegFromConst (hc08_reg_h, zero);
-            }
-          else
-            {
-              loadRegFromAop (hc08_reg_a, AOP (IC_RIGHT (ic)), 0);
-              transferRegReg (hc08_reg_a, hc08_reg_x, FALSE);
-              emitcode ("rola", "");
-              emitcode ("clra", "");
-              emitcode ("sbc", "#0");
-              regalloc_dry_run_cost += 4;
-              hc08_useReg (hc08_reg_a);
-              transferRegReg (hc08_reg_a, hc08_reg_h, FALSE);
-            }
-        }
-      else
-        loadRegFromAop (hc08_reg_hx, AOP (IC_RIGHT (ic)), 0);
-      size = AOP_SIZE (IC_RIGHT (lic));
-      derefaop->size = size;
-
-      while (size--)
-        {
-          loadRegFromAop (hc08_reg_a, AOP (IC_RIGHT (lic)), size);
-          emitcode ("sta", "%s,x", aopAdrStr (derefaop, size, TRUE));
-          regalloc_dry_run_cost += 3;
-          hc08_freeReg (hc08_reg_a);
-        }
-
-      lic->generated = 1;
-      hc08_freeReg (hc08_reg_hx);
-
-      freeAsmop (NULL, derefaop, ic, TRUE);
-      freeAsmop (IC_RIGHT (ic), NULL, ic, TRUE);
-      freeAsmop (IC_RIGHT (lic), NULL, lic, TRUE);
-
-      return TRUE;
-    }
-
-  return FALSE;
-}
-
-
 /*-----------------------------------------------------------------*/
 /* hasInchc08 - operand is incremented before any other use        */
 /*-----------------------------------------------------------------*/
@@ -9457,8 +9291,7 @@ genhc08iCode (iCode *ic)
       break;
 
     case '+':
-      if (!genPointerGetSetOfs (ic))
-        genPlus (ic);
+      genPlus (ic);
       break;
 
     case '-':
